force-app/main/default/objects/custom_create229__c/custom_create229__c.object-meta.xml
<CustomObject>
    <label>Custom created object229</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects229</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>