force-app/main/default/objects/custom_create229__c/fields/custom_create_229field523__c.field-meta.xml
<CustomField>
    <fullName>custom_create_229field523__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 229field523</label>
    <type>Checkbox</type>
</CustomField>